--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -51,6 +51,7 @@
     grid-template-columns: 1fr 2fr;
     place-content: center;
     place-items: center;
+    gap: 20px;
 
     .CartButton {
         color: white;
