--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -12,6 +12,7 @@ a {
     display: grid;
     grid-template-columns: 3fr 1fr;
     gap: 50px;
+    place-content: center;
 
     .pagetitle {
         font-size: 50px;
@@ -59,13 +60,11 @@ a {
         }
         
         .number {
+            align-self: center;
 
             p {
                 margin: 0;
             }
-
-            place-content: center;
-            place-items: center;
 
             .quantity {
                 border: 1px solid;
@@ -101,6 +100,7 @@ a {
 
         .item_sum {
             text-align: right;
+            align-self: center;
             place-content: center;
             place-items: center;
             font-size: 20px;
@@ -160,6 +160,7 @@ a {
             height: 44px;
             width: 250px;
             border: 1px solid;
+            display: grid;
             place-content: center;
             place-items: center;
             font-weight: bold;
