--- a/src/assets/scss/page/_top.scss
+++ b/src/assets/scss/page/_top.scss
@@ -1,5 +1,6 @@
 @use "../mixin/index" as m;
 
+
 .itembox {
     &-inner {
         @include m.sectionInner(900px);
@@ -19,6 +20,20 @@
     &-name {
         padding-top: 20px;
         font-size: 16px;
+    }
+
+    &-container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &-quantity {
+        display: flex;
+        padding: 15px 10px;
+    }
+
+    &-decrease {
+        
     }
 }
 
