--- a/src/assets/scss/mixin/_mixin.scss
+++ b/src/assets/scss/mixin/_mixin.scss
@@ -9,8 +9,7 @@
 
 @mixin Btn($Width) {
     width: $Width;
-    padding: 20px 10px;
-    margin: 0 auto;
+    padding: 10px;
     color: #fff;
     background-color: #000;
     text-align: center;
