--- a/src/assets/scss/module/_header.scss
+++ b/src/assets/scss/module/_header.scss
@@ -1,12 +1,20 @@
 
-header {
-    width: 100%;
-    padding: 20px 10px;
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 12%;
     background-color: #ccc;
+
 
     &-list {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+        column-gap: 20px;
+    }
+
+    &-box {
+        display: flex;
+        column-gap: 20px;
     }
 
 }
