--- a/src/assets/scss/page/_cart.scss
+++ b/src/assets/scss/page/_cart.scss
@@ -78,8 +78,17 @@
 
     &-side {
         flex-basis: 35%;
-        height: 300px;
+        height: 30%;
+        padding: 30px;
+        margin-top: 84px;
         border: 2px solid #000;
+    }
+
+    &-money {
+        
+        span {
+            font-size: 14px;
+        }
     }
 
 }
