--- a/src/assets/scss/page/_cart.scss
+++ b/src/assets/scss/page/_cart.scss
@@ -77,10 +77,9 @@
     }
 
     &-side {
-        flex-basis: 35%;
         height: 30%;
         padding: 30px;
-        margin-top: 84px;
+        margin: 84px auto 0 auto;
         border: 2px solid #000;
     }
 
