--- a/src/assets/scss/mixin/_mixin.scss
+++ b/src/assets/scss/mixin/_mixin.scss
@@ -18,6 +18,10 @@
     color: #fff;
     background-color: #000;
     text-align: center;
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
 }
 
 
