--- a/src/assets/scss/page/_cart.scss
+++ b/src/assets/scss/page/_cart.scss
@@ -45,10 +45,10 @@
 
     &-goods {
         flex-basis: 70%;
+        padding-left: 10px;
     }
 
     &-maker {
-        padding-top: 15px;
         font-size: 14px;
     }
 
@@ -78,7 +78,7 @@
 
     &-side {
         height: 30%;
-        padding: 30px;
+        padding: 30px 60px;
         margin: 84px auto 0 auto;
         border: 2px solid #000;
     }
@@ -89,5 +89,6 @@
             font-size: 14px;
         }
     }
+    
 
 }
